# aracnid-core

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: publish.yml
aracnid_core/: __init__.py  base.py  base_connector.py  datetime_coercion.py  exceptions.py  query_dsl.py  timezone_config.py
aracnid_core/contract_tests/: README.md  __init__.py  base_connector_contract.py  datetime_tz_contract.py  query_dsl_sort_contract.py  query_dsl_temporal_contract.py  timezone_env_contract.py
aracnid_core/schema/: base_model.py
aracnid_core/tests/: __init__.py
docs/: base-connector-interface-spec.md  query-dsl.md
tests/contract/: test_base_connector_contract.py  test_contract_conformance.py  test_datetime_tz_contract.py  test_query_dsl.py  test_read_many_contract.py  test_timezone_env_contract.py
