[tool.poetry]
name = "aracnid-core"
version = "0.2.0"
description = "Base interfaces for Aracnid integration connectors"
authors = ["Jason Romano <aracnid@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aracnid/aracnid-core"
keywords = ["abstract", "connector"]
packages = [{include = "aracnid_core"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
ruff = "^0.15.20"
build = "^1.5.0"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
log_cli = true
log_cli_level = "DEBUG"
env_files = [".env"]

[tool.ruff]
# Target your current version
target-version = "py310"
line-length = 88 

[tool.ruff.lint]
# E = pycodestyle (Errors), F = Pyflakes (Logic Bugs)
# These are the "Pylint-like" essentials without the fluff.
select = ["E", "F", "B"] 

# Specifically ignore the stuff that usually annoys Pylint users
ignore = [
    "E501", # Ignore line length (let the formatter handle it)
    #"D",    # Ignore all Docstring requirements
    "ANN",  # Ignore missing type annotations (if you aren't ready for strict typing)
]
